# sentinel

./: .gitignore  CLAUDE.md  Makefile
.github/workflows/: ci.yml  images.yml
agent/: pyproject.toml
agent/sentinel/: __init__.py  api.py  approvals.py  approve.py  llm.py  loop.py  prompts.py  risk.py  runtime.py  schemas.py  store.py
agent/sentinel/skills/: __init__.py  _window.py  deploys.py  docker_info.py  loki.py  playbook.py  prometheus.py  tempo.py
agent/sql/: schema.sql
agent/tests/: fakes.py  test_api.py  test_approvals.py  test_llm.py  test_loop.py  test_prompts.py  test_risk.py  test_runtime.py  test_schemas.py  test_skills.py  test_store.py  test_store_pg.py
ansible/: ansible.cfg  deploy.yml  observability.yml  requirements.yml  site.yml
ansible/group_vars/: all.yml
ansible/inventory/group_vars/: all.yml
ansible/playbooks/: fix_config.yml  restart_container.yml  restart_postgres.yml  rollback_deploy.yml  scale_down.yml  scale_out.yml
ansible/roles/alertmanager/files/: alertmanager.yml
ansible/roles/alertmanager/handlers/: main.yml
ansible/roles/alertmanager/tasks/: main.yml
ansible/roles/alertmanager/templates/: alertmanager.yml.j2
ansible/roles/app_service/defaults/: main.yml
ansible/roles/app_service/tasks/: main.yml
ansible/roles/base/handlers/: main.yml
ansible/roles/base/tasks/: main.yml
ansible/roles/cadvisor/tasks/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/grafana/files/: dashboards.yml
ansible/roles/grafana/handlers/: main.yml
ansible/roles/grafana/tasks/: main.yml
ansible/roles/grafana/templates/: datasources.yml.j2
ansible/roles/loadgen/files/: sentinel-loadgen.service
ansible/roles/loadgen/handlers/: main.yml
ansible/roles/loadgen/tasks/: main.yml
ansible/roles/loadgen/templates/: loadgen.sh.j2
app/: .dockerignore
app/api-gateway/: Dockerfile  main.py  pyproject.toml
app/api-gateway/tests/: test_main.py
app/checkout-worker/: Dockerfile  main.py  pyproject.toml
app/checkout-worker/tests/: test_main.py
app/common/: telemetry.py
app/orders-service/: Dockerfile  main.py  pyproject.toml
app/orders-service/tests/: test_main.py  test_telemetry.py
app/payments-service/: .dockerignore  Dockerfile  conftest.py  main.py  pyproject.toml
app/payments-service/tests/: test_main.py
faults/: inject.yml
grafana/dashboards/: app-overview.json  host-overview.json
infra/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  providers.tf  tfplan  variables.tf
infra/bootstrap/: main.tf  providers.tf
infra/modules/budget/: main.tf  outputs.tf  variables.tf
infra/modules/compute/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/network/: main.tf  outputs.tf  security_groups.tf  variables.tf
infra/modules/ssm/: main.tf  outputs.tf
litellm/: config.yaml
scripts/: gen-inventory.sh  webhook-stub.py
(+19 files in other folders)
