[project]
name = "sentinel-orders-service"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "psycopg[binary]>=3.2",
    "prometheus-client>=0.21",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-psycopg>=0.48b0",
]

[dependency-groups]
dev = ["pytest>=8.3"]

[tool.uv]
package = false

[tool.pytest.ini_options]
# "." makes `import main` work; ".." reaches app/ so `import common.telemetry`
# (the shared instrumentation module) resolves during tests.
pythonpath = [".", ".."]

[tool.ruff]
line-length = 100
